Fix formatting issues in Jupyter notebook

--- a/Lung_Cancer_Detection_VGG16.ipynb
+++ b/Lung_Cancer_Detection_VGG16.ipynb
@@ -62,7 +62,7 @@
         "tf.random.set_seed(SEED)\n",
         "print(f\"Random Seed set to: {SEED}\")\n",
         "\n",
-       "# ==========================================\n",
+        "# ==========================================\n",
         "# 1. KAGGLE CONFIGURATION AND DATA DOWNLOAD\n",
         "# ==========================================\n",
         "print(\"\\n1. Configuring Kaggle API...\")\n",
@@ -116,7 +116,7 @@
         "    else:\n",
         "        print(\"❌ Error downloading dataset. Please check your Kaggle API token.\")\n",
         "else:\n",
-        "    print(\"❌ Critical Error: Kaggle API credentials not found. Cannot download dataset.\")\n"
+        "    print(\"❌ Critical Error: Kaggle API credentials not found. Cannot download dataset.\")\n",
         "# ==========================================\n",
         "# 2. DATA PREPARATION & PREPROCESSING\n",
         "# ==========================================\n",
